python/tests/gold/tracingtestshorttraceid/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: TracingService\nname: tracing-64\nservice: zipkin-64:9411\ndriver: zipkin\nconfig:\n  trace_id_128bit: false\nambassador_id: tracingtestshorttraceid\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: TracingService\\nname: tracing-64\\nservice: zipkin-64:9411\\ndriver: zipkin\\nconfig:\\n  trace_id_128bit: false\\nambassador_id: tracingtestshorttraceid\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"tracingtestshorttraceid\", [...]
                    },
                    "creationTimestamp": "2020-01-09T12:56:17Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "tracingtestshorttraceid",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tracingtestshorttraceid",
                    "namespace": "default",
                    "resourceVersion": "15942",
                    "selfLink": "/api/v1/namespaces/default/services/tracingtestshorttraceid",
                    "uid": "6d398d99-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.110.116.72",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31372,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30276,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "tracingtestshorttraceid"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tracingtestshorttraceid\",\"scope\":\"AmbassadorTest\",\"service\":\"tracingtestshorttraceid-admin\"},\"name\":\"tracingtestshorttraceid-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"tracingtestshorttraceid-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"tracingte [...]
                    },
                    "creationTimestamp": "2020-01-09T12:56:18Z",
                    "labels": {
                        "kat-ambassador-id": "tracingtestshorttraceid",
                        "scope": "AmbassadorTest",
                        "service": "tracingtestshorttraceid-admin"
                    },
                    "name": "tracingtestshorttraceid-admin",
                    "namespace": "default",
                    "resourceVersion": "15959",
                    "selfLink": "/api/v1/namespaces/default/services/tracingtestshorttraceid-admin",
                    "uid": "6d7fc056-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.103.114.221",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "tracingtestshorttraceid-admin",
                            "nodePort": 30930,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "tracingtestshorttraceid"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Mapping\nname: tracing_target_mapping_64\nprefix: /target-64/\nservice: tracingtestshorttraceid-http\nambassador_id: tracingtestshorttraceid\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: tracing_target_mapping_64\\nprefix: /target-64/\\nservice: tracingtestshorttraceid-http\\nambassador_id: tracingtestshorttraceid\\n\"},\"labels\":{\"kat-ambassador-id\":\"tracingtestshorttraceid\",\"scope\":\"AmbassadorTest\"},\"name\":\"tracingtestshorttraceid- [...]
                    },
                    "creationTimestamp": "2020-01-09T12:56:19Z",
                    "labels": {
                        "kat-ambassador-id": "tracingtestshorttraceid",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tracingtestshorttraceid-http",
                    "namespace": "default",
                    "resourceVersion": "15986",
                    "selfLink": "/api/v1/namespaces/default/services/tracingtestshorttraceid-http",
                    "uid": "6ddd493d-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.111.135.119",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8131
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8494
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tracingtestshorttraceid\",\"scope\":\"AmbassadorTest\"},\"name\":\"zipkin-64\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":9411,\"targetPort\":\"http\"}],\"selector\":{\"app\":\"zipkin-64\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-09T12:56:18Z",
                    "labels": {
                        "kat-ambassador-id": "tracingtestshorttraceid",
                        "scope": "AmbassadorTest"
                    },
                    "name": "zipkin-64",
                    "namespace": "default",
                    "resourceVersion": "15969",
                    "selfLink": "/api/v1/namespaces/default/services/zipkin-64",
                    "uid": "6da7c384-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.96.32.34",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31724,
                            "port": 9411,
                            "protocol": "TCP",
                            "targetPort": "http"
                        }
                    ],
                    "selector": {
                        "app": "zipkin-64"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
